fix spacing for about details section

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ nav span {
 
 .about-details {
 	display: inline-block;
-	max-width: 40%;
+	max-width: 55%;
 	margin: 0 auto;
 	margin-top: 3%;
 }
